--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   avatar           : "images/profile.png"
   name             : "Zhuoyu WU (Reagan)"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  bio              : "Way to Innovation"
+  location         : "China"
   employer         : "Monash University Malaysia"
   uri              : # URL
   email            : "zhuoyu.wu@monash.edu" 
