--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "https://github.com/ReaganWu/zhuoyuwu.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/profile.jpg"
+  avatar           : "images/profile.png"
   name             : "Zhuoyu WU (Reagan)"
   pronouns         : # example: "she/her"  
   bio              : "Way to Innovation"
