--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "ZHUOYU WU's Homepage"
+title                    : "ZHUOYU WU"
 title_separator          : "-"
 name                     : &name "Zhuoyu"
 description              : &description "personal description"
-url                      : https://github.com/ReaganWu/zhuoyuwu.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://github.com/ReaganWu/zhuoyuwu.github.iO # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/ReaganWu/zhuoyuwu.github.io"
 
@@ -23,7 +23,7 @@ repository               : "https://github.com/ReaganWu/zhuoyuwu.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Zhuoyu WU (Reagan)"
+  name             : "Zhuoyu WU(Reagan)"
   pronouns         : # example: "she/her"  
   bio              : "Way to Innovation"
   location         : "China"
