--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "China"
   employer         : "Monash University Malaysia"
   uri              : # URL
-  email            : "zhuoyu.wu@monash.edu" 
+  email            : "zhuoyu.wu at monash.edu" 
 
   # Academic websites
   academia         : # URL
