--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "ZHUOYU WU"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Zhuoyu"
+name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://github.com/ReaganWu/zhuoyuwu.github.iO # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://github.com/ReaganWu/zhuoyuwu.github.io"
+repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -23,13 +23,13 @@ repository               : "https://github.com/ReaganWu/zhuoyuwu.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Zhuoyu WU(Reagan)"
+  name             : "ZHUOYU WU(Reagan)"
   pronouns         : # example: "she/her"  
-  bio              : "Way to Innovation"
-  location         : "China"
-  employer         : "Monash University Malaysia"
+  bio              : "Short biography for the left-hand sidebar"
+  location         : "Earth"
+  employer         : "Red Brick University"
   uri              : # URL
-  email            : "zhuoyu.wu at monash.edu" 
+  email            : "none@example.org" 
 
   # Academic websites
   academia         : # URL
